--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Klarhet</title>
-   <link rel="icon" href="/assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon">
+   <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-   <link rel="stylesheet" href="/SCSS/main.css">
+   <link rel="stylesheet" href="SCSS/main.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
          <div class="container-fluid">
             <div class="ij-navbar-buttons">
                <a class="" href="#">
-                  <img src="/assets/img/logos/logga klarhet.png" class="img-fluid" alt="logo">
+                  <img src="assets/img/logos/logga klarhet.png" class="img-fluid" alt="logo">
                </a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
         <div class="col-md-12 padding">
           <div class="ij-hero__item">
             <!-- Add the image directly using the img tag -->
-            <img class="ij-hero__image" src="/assets/img/hero-img.jpg" alt="Hero Image">
+            <img class="ij-hero__image" src="assets/img/hero-img.jpg" alt="Hero Image">
             <div class="ij-hero__content">
               <h1>KLARHET</h1>
               <p class="mb-4">
@@ -81,7 +81,7 @@
                   <div class="col-lg-4">
                       <div class="team-member">
                           <div class="round-image-container">
-                            <img src="/assets/img/anna-removebg-preview.png" alt="...">
+                            <img src="assets/img/anna-removebg-preview.png" alt="...">
                           </div>
                           <h4>Anna</h4>
                           <p>Lead Designer</p>
@@ -103,7 +103,7 @@
                   <div class="col-lg-4">
                     <div class="team-member">
                         <div class="round-image-container">
-                          <img src="/assets/img/katarina-removebg-preview.png" alt="...">
+                          <img src="assets/img/katarina-removebg-preview.png" alt="...">
                         </div>
                         <h4>Lead Designer</h4>
                         <p class="text-muted">Här kan ni skriva en kort text om vem ni är och vad du erbjuder max 100 ord</p>
@@ -131,7 +131,7 @@
             </p>
           </div>
           <div class="col-md-6 ij-section2__img">
-            <img src="/assets/img/Company.jpg">
+            <img src="assets/img/Company.jpg">
           </div>
         </div>
         </div>
@@ -152,7 +152,7 @@
             </p>
           </div>
           <div class="col-md-6 ij-section3__img">
-            <img src="/assets/img/privatperson.jpg">
+            <img src="assets/img/privatperson.jpg">
           </div>
         </div>
         </div>
@@ -199,7 +199,7 @@
         <p class="text-center text-body-secondary">© Copyright 2023</p>
       </div>
     </footer>
-   <script src="/Javascript/main.js"></script>
+   <script src="Javascript/main.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
