lägga till grid

--- a/index.html
+++ b/index.html
@@ -46,30 +46,84 @@
    </header>
     <main>
   <!-- Start Banner -->
-<section id="home">
-  <div class="ij-hero">
-    <div class="container-fluid ij-hero__wrap">
-      <div class="row">
-        <div class="col-md-12 padding">
-          <div class="ij-hero__item">
-            <!-- Add the image directly using the img tag -->
-            <img class="ij-hero__image" src="assets/img/hero-img.jpg" alt="Hero Image">
-            <div class="ij-hero__content">
-              <h1>KLARHET</h1>
-              <p class="mb-4">
-                Här kan ni skriva lite kort om klarhet och vad det är. Max 50 ord.
-                <br> 
-                Ac vestibulum quis proin in aliquam et et auctor. 
-                Amet urna est arcu euismod egestas morbi nunc lacus. Nec id rutrum mauris commodo habitant amet quisque. 
-                Velit ornare pellentesque facilisi in odio nibh.
-              </p>
+  <section id="home">
+    <div class="ij-hero">
+      <div class="ij-hero__wrap">
+        <div class="row">
+          <div class="col-md-12 padding">
+            <div class="ij-hero__item">
+              <div class="ij-hero__content">
+                <h1>KLARHET</h1>
+              </div>
+              <img class="ij-hero__image" src="assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.jpg" alt="Hero Image">
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+  <section id="gridSection">
+    <div class="container-fluid">
+      <div class="row">
+        <!-- Första raden med 3 bilder -->
+        <div class="col-md-4 row1">
+          <div class="idatest">
+            <img src="assets/img/anna/felix-mittermeier-Xk0DZSYv1ao-unsplash 2.jpg" alt="Image 1">
+          </div>
+
+          <div class="image-overlay">
+            <p>Lära</p>
+          </div>
+        </div>
+        <div class="col-md-4 row1">
+          <img src="assets/img/anna/bok och filt.jpg" alt="Image 2">
+          <div class="image-overlay">
+            <p>Self Love</p>
+          </div>
+        </div>
+        <div class="col-md-4 row1">
+          <img src="assets/img/anna/astrid-schaffner-qcIkeYYALT4-unsplash.jpg" alt="Image 3">
+          <div class="image-overlay">
+            <p>Leta</p>
+          </div>
+        </div>
+  
+        <!-- Andra raden med 2 bilder -->
+        <div class="col-md-6">
+          <img src="assets/img/anna/zac-durant-_6HzPU9Hyfg-unsplash.jpg" alt="Image 4">
+          <div class="image-overlay">
+            <p>Leva</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="assets/img/anna/jackson-david-yhDetJEbN5s-unsplash.jpg" alt="Image 5">
+          <div class="image-overlay">
+            <p>Lyssna</p>
+          </div>
+        </div>
+  
+        <!-- Tredje raden med 3 bilder -->
+        <div class="col-md-4 row2">
+          <img src="assets/img/anna/helena-lopes-PGnqT0rXWLs-unsplash 2.jpg" alt="Image 6">
+          <div class="image-overlay">
+            <p>Ledarskap</p>
+          </div>
+        </div>
+        <div class="col-md-4 row2">
+          <img src="assets/img/anna/todd-rhines-W0jzK552m8E-unsplash.jpg" alt="Image 7">
+          <div class="image-overlay">
+            <p>Längta</p>
+          </div>
+        </div>
+        <div class="col-md-4 row2">
+          <img src="assets/img/anna/nathan-dumlao-eUbNeGQEh2U-unsplash.jpg" alt="Image 8">
+          <div class="image-overlay">
+            <p>Leka</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
          <!-- Cards -->
       <section id="section1">
           <div class="container ida-section1">
@@ -105,8 +159,18 @@
                         <div class="round-image-container">
                           <img src="assets/img/katarina-removebg-preview.png" alt="...">
                         </div>
-                        <h4>Lead Designer</h4>
-                        <p class="text-muted">Här kan ni skriva en kort text om vem ni är och vad du erbjuder max 100 ord</p>
+                        <h4>Katarina</h4>
+                        <p>Lead Designer</p>
+                        <p class="text-muted text-start mb-4">Aliquet donec ut arcu risus amet mattis diam gravida. 
+                          Ac vestibulum quis proin in aliquam et et auctor. Amet urna est arcu euismod egestas morbi nunc lacus. 
+                          Nec id rutrum mauris commodo habitant amet quisque. 
+                          Velit ornare pellentesque facilisi in odio nibh. 
+                          <br/>
+                          <br/>
+                          Aliquet donec ut arcu risus amet mattis diam gravida. 
+                          Ac vestibulum quis proin in aliquam et et auctor. 
+                          Amet urna est arcu euismod egestas morbi nunc lacus. 
+                          Nec id rutrum mauris commodo habitant amet quisque. Velit ornare pellentesque facilisi in odio nibh.</p>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="bi bi-tiktok" aria-hidden="true"></i> </a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="bi bi-instagram" aria-hidden="true"></i></a>
