Lagt till bildpuffar

--- a/index.html
+++ b/index.html
@@ -63,63 +63,44 @@
     </div>
   </section>
   <section id="gridSection">
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
       <div class="row">
-        <!-- Första raden med 3 bilder -->
-        <div class="col-md-4 row1">
-          <div class="idatest">
-            <img src="assets/img/anna/felix-mittermeier-Xk0DZSYv1ao-unsplash 2.jpg" alt="Image 1">
-          </div>
-
-          <div class="image-overlay">
-            <p>Lära</p>
-          </div>
+        <div class="col-md-4 idatest">
+          <img src="assets/img/anna/Lära.jpg" alt="Lära">
+          <p class="textDownLeft">Lära</p>
+          <a href="#" class="link"></a>
         </div>
-        <div class="col-md-4 row1">
-          <img src="assets/img/anna/bok och filt.jpg" alt="Image 2">
-          <div class="image-overlay">
-            <p>Self Love</p>
-          </div>
+        <div class="col-md-4 idatest">
+          <img src="assets/img/anna/SelfLove.jpg" alt="Self love">
+          <p class="textDownLeft">Self love</p>
         </div>
-        <div class="col-md-4 row1">
-          <img src="assets/img/anna/astrid-schaffner-qcIkeYYALT4-unsplash.jpg" alt="Image 3">
-          <div class="image-overlay">
-            <p>Leta</p>
-          </div>
+        <div class="col-md-4 idatest">
+          <img src="assets/img/anna/Leta.jpg" alt="Leta">
+          <p class="textDownLeft">Leta</p>
         </div>
-  
-        <!-- Andra raden med 2 bilder -->
-        <div class="col-md-6">
-          <img src="assets/img/anna/zac-durant-_6HzPU9Hyfg-unsplash.jpg" alt="Image 4">
-          <div class="image-overlay">
-            <p>Leva</p>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 idatest2">
+          <img src="assets/img/anna/Leva.jpg" alt="Leva">
+          <p class="textDownRight">Leva</p>
         </div>
-        <div class="col-md-6">
-          <img src="assets/img/anna/jackson-david-yhDetJEbN5s-unsplash.jpg" alt="Image 5">
-          <div class="image-overlay">
-            <p>Lyssna</p>
-          </div>
+        <div class="col-md-6 idatest2">
+          <img src="assets/img/anna/Lyssna.jpg" alt="Lyssna">
+          <p class="textDownRight">Lyssna</p>
         </div>
-  
-        <!-- Tredje raden med 3 bilder -->
-        <div class="col-md-4 row2">
-          <img src="assets/img/anna/helena-lopes-PGnqT0rXWLs-unsplash 2.jpg" alt="Image 6">
-          <div class="image-overlay">
-            <p>Ledarskap</p>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 idatest">
+          <img src="assets/img/anna/Ledarskap.jpg" alt="Ledarskap">
+          <p class="textDownMiddle">Ledarskap</p>
         </div>
-        <div class="col-md-4 row2">
-          <img src="assets/img/anna/todd-rhines-W0jzK552m8E-unsplash.jpg" alt="Image 7">
-          <div class="image-overlay">
-            <p>Längta</p>
-          </div>
+        <div class="col-md-4 idatest">
+          <img src="assets/img/anna/Längtan.jpg" alt="Längtan">
+          <p class="textDownMiddle">Längtan</p>
         </div>
-        <div class="col-md-4 row2">
-          <img src="assets/img/anna/nathan-dumlao-eUbNeGQEh2U-unsplash.jpg" alt="Image 8">
-          <div class="image-overlay">
-            <p>Leka</p>
-          </div>
+        <div class="col-md-4 idatest">
+          <img src="assets/img/anna/Leka.jpg" alt="Leka">
+          <p class="textDownMiddle">Leka</p>
         </div>
       </div>
     </div>
@@ -178,6 +159,174 @@
                 </div>
               </div>
           </div>
+      </section>
+      <section id="cardSection">
+        <div class="container-fluid text-center">
+          <div class="row">
+            <div class="col-md-3">
+              <div class="card" id="ij-card1">
+                <img src="assets/img/anna/Lära.jpg" alt="Lära">
+                <div class="card-body">
+                  <h5 class="card-title">Lära</h5>
+                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <div class="collapse collapsed-text" id="collapse1">
+                    <p>
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                    </p>
+                  </div>
+                  <div class="card-links">
+                    <a class="read-more-link" id="readMoreLink1" data-bs-toggle="collapse" href="#collapse1" role="button" aria-expanded="false" aria-controls="collapse1">Läs mer</a>
+                    <a href="#" class="btn btn-primary">Boka</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card" id="ij-card2">
+                <img src="assets/img/anna/SelfLove.jpg" alt="Self Love">
+                <div class="card-body">
+                  <h5 class="card-title">Self Love</h5>
+                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <div class="collapse collapsed-text" id="collapse2">
+                    <p>
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                    </p>
+                  </div>
+                  <div class="card-links">
+                    <a class="read-more-link" id="readMoreLink2" data-bs-toggle="collapse" href="#collapse2" role="button" aria-expanded="false" aria-controls="collapse2">Läs mer</a>
+                    <a href="#" class="btn btn-primary">Boka</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card" id="ij-card3">
+                <img src="assets/img/anna/Leta.jpg" alt="Leta">
+                <div class="card-body">
+                  <h5 class="card-title">Leta</h5>
+                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <div class="collapse collapsed-text" id="collapse3">
+                    <p>
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                    </p>
+                  </div>
+                  <div class="card-links">
+                    <a class="read-more-link" id="readMoreLink3" data-bs-toggle="collapse" href="#collapse3" role="button" aria-expanded="false" aria-controls="collapse3">Läs mer</a>
+                    <a href="#" class="btn btn-primary">Boka</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card" id="ij-card4">
+                <img src="assets/img/anna/Leva.jpg" alt="Leva">
+                <div class="card-body">
+                  <h5 class="card-title">Leva</h5>
+                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <div class="collapse collapsed-text" id="collapse4">
+                    <p>
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                    </p>
+                  </div>
+                  <div class="card-links">
+                    <a class="read-more-link" id="readMoreLink4" data-bs-toggle="collapse" href="#collapse4" role="button" aria-expanded="false" aria-controls="collapse4">Läs mer</a>
+                    <a href="#" class="btn btn-primary">Boka</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <div class="card" id="ij-card5">
+                <img src="assets/img/anna/Lyssna.jpg" alt="Lyssna">
+                <div class="card-body">
+                  <h5 class="card-title">Lyssna</h5>
+                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <div class="collapse collapsed-text" id="collapse5">
+                    <p>
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                    </p>
+                  </div>
+                  <div class="card-links">
+                    <a class="read-more-link" id="readMoreLink5" data-bs-toggle="collapse" href="#collapse5" role="button" aria-expanded="false" aria-controls="collapse5">Läs mer</a>
+                    <a href="#" class="btn btn-primary">Boka</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card" id="ij-card6">
+                <img src="assets/img/anna/Ledarskap.jpg" alt="Ledarskap">
+                <div class="card-body">
+                  <h5 class="card-title">Ledarskap</h5>
+                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <div class="collapse collapsed-text" id="collapse6">
+                    <p>
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                    </p>
+                  </div>
+                  <div class="card-links">
+                    <a class="read-more-link" id="readMoreLink6" data-bs-toggle="collapse" href="#collapse6" role="button" aria-expanded="false" aria-controls="collapse6">Läs mer</a>
+                    <a href="#" class="btn btn-primary">Boka</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card" id="ij-card7">
+                <img src="assets/img/anna/Längtan.jpg" alt="Längtan">
+                <div class="card-body">
+                  <h5 class="card-title">Längtan</h5>
+                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <div class="collapse collapsed-text" id="collapse7">
+                    <p>
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                    </p>
+                  </div>
+                  <div class="card-links">
+                    <a class="read-more-link" id="readMoreLink7" data-bs-toggle="collapse" href="#collapse7" role="button" aria-expanded="false" aria-controls="collapse7">Läs mer</a>
+                    <a href="#" class="btn btn-primary">Boka</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card" id="ij-card8">
+                <img src="assets/img/anna/Leka.jpg" alt="Leka">
+                <div class="card-body">
+                  <h5 class="card-title">Leka</h5>
+                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <div class="collapse collapsed-text" id="collapse8">
+                    <p>
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                    </p>
+                  </div>
+                  <div class="card-links">
+                    <a class="read-more-link" id="readMoreLink8" data-bs-toggle="collapse" href="#collapse8" role="button" aria-expanded="false" aria-controls="collapse8">Läs mer</a>
+                    <a href="#" class="btn btn-primary">Boka</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
        <!-- Section2 -->
        <section id="section2" class="ij-section2">
