--- a/index.html
+++ b/index.html
@@ -68,39 +68,46 @@
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Lära.jpg" alt="Lära">
           <p class="textDownLeft">Lära</p>
-          <a href="#" class="link"></a>
+          <a href="#ij-card1" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/SelfLove.jpg" alt="Self love">
           <p class="textDownLeft">Self love</p>
+          <a href="#ij-card2" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Leta.jpg" alt="Leta">
           <p class="textDownLeft">Leta</p>
+          <a href="#ij-card3" class="link"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 idatest2">
           <img src="assets/img/anna/Leva.jpg" alt="Leva">
           <p class="textDownRight">Leva</p>
+          <a href="#ij-card4" class="link"></a>
         </div>
         <div class="col-md-6 idatest2">
           <img src="assets/img/anna/Lyssna.jpg" alt="Lyssna">
           <p class="textDownRight">Lyssna</p>
+          <a href="#ij-card5" class="link"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Ledarskap.jpg" alt="Ledarskap">
           <p class="textDownMiddle">Ledarskap</p>
+          <a href="#ij-card6" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Längtan.jpg" alt="Längtan">
           <p class="textDownMiddle">Längtan</p>
+          <a href="#ij-card7" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Leka.jpg" alt="Leka">
           <p class="textDownMiddle">Leka</p>
+          <a href="#ij-card8" class="link"></a>
         </div>
       </div>
     </div>
@@ -163,7 +170,7 @@
       <section id="cardSection">
         <div class="container-fluid text-center">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-lg-3">
               <div class="card" id="ij-card1">
                 <img src="assets/img/anna/Lära.jpg" alt="Lära">
                 <div class="card-body">
@@ -183,7 +190,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3">
               <div class="card" id="ij-card2">
                 <img src="assets/img/anna/SelfLove.jpg" alt="Self Love">
                 <div class="card-body">
@@ -203,7 +210,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3">
               <div class="card" id="ij-card3">
                 <img src="assets/img/anna/Leta.jpg" alt="Leta">
                 <div class="card-body">
@@ -223,7 +230,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3">
               <div class="card" id="ij-card4">
                 <img src="assets/img/anna/Leva.jpg" alt="Leva">
                 <div class="card-body">
@@ -245,7 +252,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-lg-3">
               <div class="card" id="ij-card5">
                 <img src="assets/img/anna/Lyssna.jpg" alt="Lyssna">
                 <div class="card-body">
@@ -265,7 +272,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3">
               <div class="card" id="ij-card6">
                 <img src="assets/img/anna/Ledarskap.jpg" alt="Ledarskap">
                 <div class="card-body">
@@ -285,7 +292,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3">
               <div class="card" id="ij-card7">
                 <img src="assets/img/anna/Längtan.jpg" alt="Längtan">
                 <div class="card-body">
@@ -305,7 +312,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3">
               <div class="card" id="ij-card8">
                 <img src="assets/img/anna/Leka.jpg" alt="Leka">
                 <div class="card-body">
