--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="ij-hero__content">
                 <h1>KLARHET</h1>
               </div>
-              <img class="ij-hero__image" src="assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.jpg" alt="Hero Image">
+              <img class="ij-hero__image" src="assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.webp" alt="Hero Image">
             </div>
           </div>
         </div>
@@ -66,46 +66,46 @@
     <div class="container-fluid text-center">
       <div class="row">
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Lära.jpg" alt="Lära">
+          <img src="assets/img/anna/Lära.webp" alt="Lära">
           <p class="textDownLeft">Lära</p>
           <a href="#ij-card1" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/SelfLove.jpg" alt="Self love">
+          <img src="assets/img/anna/SelfLove.webp" alt="Self love">
           <p class="textDownLeft">Self love</p>
           <a href="#ij-card2" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Leta.jpg" alt="Leta">
+          <img src="assets/img/anna/Leta.webp" alt="Leta">
           <p class="textDownLeft">Leta</p>
           <a href="#ij-card3" class="link"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 idatest2">
-          <img src="assets/img/anna/Leva.jpg" alt="Leva">
+          <img src="assets/img/anna/Leva.webp" alt="Leva">
           <p class="textDownRight">Leva</p>
           <a href="#ij-card4" class="link"></a>
         </div>
         <div class="col-md-6 idatest2">
-          <img src="assets/img/anna/Lyssna.jpg" alt="Lyssna">
+          <img src="assets/img/anna/Lyssna.webp" alt="Lyssna">
           <p class="textDownRight">Lyssna</p>
           <a href="#ij-card5" class="link"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Ledarskap.jpg" alt="Ledarskap">
+          <img src="assets/img/anna/Ledarskap.webp" alt="Ledarskap">
           <p class="textDownMiddle">Ledarskap</p>
           <a href="#ij-card6" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Längtan.jpg" alt="Längtan">
+          <img src="assets/img/anna/Längtan.webp" alt="Längtan">
           <p class="textDownMiddle">Längtan</p>
           <a href="#ij-card7" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Leka.jpg" alt="Leka">
+          <img src="assets/img/anna/Leka.webp" alt="Leka">
           <p class="textDownMiddle">Leka</p>
           <a href="#ij-card8" class="link"></a>
         </div>
@@ -172,7 +172,7 @@
           <div class="row">
             <div class="col-lg-3">
               <div class="card" id="ij-card1">
-                <img src="assets/img/anna/Lära.jpg" alt="Lära">
+                <img src="assets/img/anna/Lära.webp" alt="Lära">
                 <div class="card-body">
                   <h5 class="card-title">Lära</h5>
                   <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
@@ -192,7 +192,7 @@
             </div>
             <div class="col-lg-3">
               <div class="card" id="ij-card2">
-                <img src="assets/img/anna/SelfLove.jpg" alt="Self Love">
+                <img src="assets/img/anna/SelfLove.webp" alt="Self Love">
                 <div class="card-body">
                   <h5 class="card-title">Self Love</h5>
                   <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
@@ -212,7 +212,7 @@
             </div>
             <div class="col-lg-3">
               <div class="card" id="ij-card3">
-                <img src="assets/img/anna/Leta.jpg" alt="Leta">
+                <img src="assets/img/anna/Leta.webp" alt="Leta" >
                 <div class="card-body">
                   <h5 class="card-title">Leta</h5>
                   <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
@@ -232,7 +232,7 @@
             </div>
             <div class="col-lg-3">
               <div class="card" id="ij-card4">
-                <img src="assets/img/anna/Leva.jpg" alt="Leva">
+                <img src="assets/img/anna/Leva.webp" alt="Leva" >
                 <div class="card-body">
                   <h5 class="card-title">Leva</h5>
                   <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
@@ -254,7 +254,7 @@
           <div class="row">
             <div class="col-lg-3">
               <div class="card" id="ij-card5">
-                <img src="assets/img/anna/Lyssna.jpg" alt="Lyssna">
+                <img src="assets/img/anna/Lyssna.webp" alt="Lyssna" >
                 <div class="card-body">
                   <h5 class="card-title">Lyssna</h5>
                   <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
@@ -274,7 +274,7 @@
             </div>
             <div class="col-lg-3">
               <div class="card" id="ij-card6">
-                <img src="assets/img/anna/Ledarskap.jpg" alt="Ledarskap">
+                <img src="assets/img/anna/Ledarskap.webp" alt="Ledarskap" >
                 <div class="card-body">
                   <h5 class="card-title">Ledarskap</h5>
                   <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
@@ -294,7 +294,7 @@
             </div>
             <div class="col-lg-3">
               <div class="card" id="ij-card7">
-                <img src="assets/img/anna/Längtan.jpg" alt="Längtan">
+                <img src="assets/img/anna/Längtan.webp" alt="Längtan" >
                 <div class="card-body">
                   <h5 class="card-title">Längtan</h5>
                   <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
@@ -314,7 +314,7 @@
             </div>
             <div class="col-lg-3">
               <div class="card" id="ij-card8">
-                <img src="assets/img/anna/Leka.jpg" alt="Leka">
+                <img src="assets/img/anna/Leka.webp" alt="Leka" >
                 <div class="card-body">
                   <h5 class="card-title">Leka</h5>
                   <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
@@ -351,7 +351,7 @@
             </p>
           </div>
           <div class="col-md-6 ij-section2__img">
-            <img src="assets/img/Company.jpg">
+            <img src="assets/img/Company.jpg" >
           </div>
         </div>
         </div>
@@ -372,7 +372,7 @@
             </p>
           </div>
           <div class="col-md-6 ij-section3__img">
-            <img src="assets/img/privatperson.jpg">
+            <img src="assets/img/privatperson.jpg" >
           </div>
         </div>
         </div>
