--- a/index.html
+++ b/index.html
@@ -66,52 +66,53 @@
     <div class="container-fluid text-center">
       <div class="row">
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Lära.webp" alt="Lära">
+          <img src="assets/img/anna/Lära.webp" alt="Lära" loading="lazy">
           <p class="textDownLeft">Lära</p>
           <a href="#ij-card1" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/SelfLove.webp" alt="Self love">
+          <img src="assets/img/anna/SelfLove.webp" alt="Self love" loading="lazy">
           <p class="textDownLeft">Self love</p>
           <a href="#ij-card2" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Leta.webp" alt="Leta">
+          <img src="assets/img/anna/Leta.webp" alt="Leta" loading="lazy">
           <p class="textDownLeft">Leta</p>
           <a href="#ij-card3" class="link"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 idatest2">
-          <img src="assets/img/anna/Leva.webp" alt="Leva">
+          <img src="assets/img/anna/Leva.webp" alt="Leva" loading="lazy">
           <p class="textDownRight">Leva</p>
           <a href="#ij-card4" class="link"></a>
         </div>
         <div class="col-md-6 idatest2">
-          <img src="assets/img/anna/Lyssna.webp" alt="Lyssna">
+          <img src="assets/img/anna/Lyssna.webp" alt="Lyssna" loading="lazy">
           <p class="textDownRight">Lyssna</p>
           <a href="#ij-card5" class="link"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Ledarskap.webp" alt="Ledarskap">
+          <img src="assets/img/anna/Ledarskap.webp" alt="Ledarskap" loading="lazy">
           <p class="textDownMiddle">Ledarskap</p>
           <a href="#ij-card6" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Längtan.webp" alt="Längtan">
+          <img src="assets/img/anna/Längtan.webp" alt="Längtan" loading="lazy">
           <p class="textDownMiddle">Längtan</p>
           <a href="#ij-card7" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Leka.webp" alt="Leka">
+          <img src="assets/img/anna/Leka.webp" alt="Leka" loading="lazy">
           <p class="textDownMiddle">Leka</p>
           <a href="#ij-card8" class="link"></a>
         </div>
-      </div>
+      </div> 
     </div>
   </section>
+
          <!-- Cards -->
       <section id="section1">
           <div class="container ida-section1">
@@ -335,6 +336,7 @@
           </div>
         </div>
       </section>
+
        <!-- Section2 -->
        <section id="section2" class="ij-section2">
         <div class="container-fluid ij-section2__container">
